--- a/.github/workflows/build-lede-x86-bak.yml
+++ b/.github/workflows/build-lede-x86-bak.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: OpenWrt Builder lede x86
+name: OpenWrt Builder lede x86 bak
 
 on:
   repository_dispatch:
