Update and rename build-lede-x86-bak.yml to build-lede-virt.yml

--- a/.github/workflows/build-lede-virt.yml
+++ b/.github/workflows/build-lede-virt.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: OpenWrt Builder lede x86 bak
+name: OpenWrt Builder lede virt
 
 on:
   repository_dispatch:
